<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/questionBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/preferred_uom"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/metricBtn"
        />

    <Button
        android:id="@+id/metricBtn"
        android:background="@drawable/rounded_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/metric"
        android:textColor="@color/orange"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionBox"
        app:layout_constraintEnd_toStartOf="@id/imperialBtn"/>

    <Button
        android:id="@+id/imperialBtn"
        android:background="@drawable/rounded_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/imperial"
        android:textColor="@color/orange"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/metricBtn"
        app:layout_constraintTop_toBottomOf="@id/questionBox"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>